hphp/hack/test/typecheck/strict_reference3.php.exp
File "strict_reference3.php", line 3, characters 19-19:
Encountered unexpected token '&'. (Parsing[1002])
