hphp/hack/test/typecheck/strict_reference3.php
<?hh

function test(int &$x): void {
  $x = 42;
}
